--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=MySpringDBDemo22
+spring.application.name=TooGoodToThrow
 
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USER}
