--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=TooGoodToThrow
 
-spring.datasource.url=jdbc:mysql://localhost:3306/madvare
-spring.datasource.username=root
-spring.datasource.password=HejMedDig1000
+spring.datasource.url=${URL}
+spring.datasource.username=${USER}
+spring.datasource.password=${PASSWORD}
 
 server.port=9090
