Azure Mysql Credentials added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=TooGoodToThrow
 
-spring.datasource.url=${URL}
-spring.datasource.username=${USER}
-spring.datasource.password=${PASSWORD}
+spring.datasource.url=jdbc:madspilddb.mysql.database.azure.com
+spring.datasource.username=gruppe1
+spring.datasource.password=HejMedDig1000
 
-server.port=9090
+server.port=3306
