Azure Mysql Credentials added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name=TooGoodToThrow
 
-spring.datasource.url=jdbc:madspilddb.mysql.database.azure.com
+spring.datasource.url=jdbc:mysql://madspilddb.mysql.database.azure.com:3306/madspild
 spring.datasource.username=gruppe1
 spring.datasource.password=HejMedDig1000
-
-server.port=3306
