Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_toogoodtothrow.yml
+++ b/.github/workflows/main_toogoodtothrow.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Java version
         uses: actions/setup-java@v4
         with:
-          java-version: 'java21'
+          java-version: '17'
           distribution: 'microsoft'
 
       - name: Build with Maven
@@ -51,4 +51,4 @@ jobs:
           app-name: 'toogoodtothrow'
           slot-name: 'Production'
           package: '*.jar'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_71B3A7C508A649AD8B5243A51C5DFF3C }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_7140C471120E428EA0FC657BD597AA36 }}
